# axum-template

./: Cargo.toml  Dockerfile  README.md  compose.yaml
src/: app.rs  error.rs  main.rs  state.rs
src/dto/: ops.rs
src/handlers/: ops.rs
src/routes/: mod.rs  openapi.rs  ops.rs
