[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["macros", "net", "rt-multi-thread", "signal"] }

tower = { version = "0.5.3", default-features = false, features = ["limit", "load-shed", "timeout", "util"] }
tower-http = { version = "0.6.8", default-features = false, features = ["compression-gzip", "cors", "request-id", "sensitive-headers", "trace", "util"] }
tower_governor = { version = "0.8", default-features = false, features = ["axum", "tracing"] }

tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", default-features = false, features = ["ansi", "env-filter", "fmt", "json", "tracing-log"] }

thiserror = "2.0.17"

serde = { version = "1.0.228", default-features = false, features = ["derive", "std"] }
serde_json = "1.0.149"

utoipa = "5.4.0"
utoipa-swagger-ui = { version = "9.0.2", default-features = false, features = ["axum", "url"] }

uuid = { version = "1.19.0", default-features = false, features = ["std", "v4"] }

[dev-dependencies]
http-body-util = "0.1.3"
